[package]
name = "stream_downloder_library"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
reqwest = { version = "0.13.4", features = ["json", "cookies", "stream"] }
serde_json = "1.0.150"
url = "2.5.8"
cookie = "0.18.1"
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.3"
urlencoding = "2.1.3"
futures = "0.3.32"
tokio = { version = "1.52.3",features = ["full"] }
async-fs = "2.2.0"
tempfile = "3.27.0"
m3u8-rs = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10.1"