[package]
name = "stream_extractor"
version = "0.1.0"
edition = "2024"

[features]
default = ["reqwest-backend"]

reqwest-backend = ["dep:reqwest"]
wreq-backend = ["dep:wreq", "dep:wreq-util"]

vod = ["dep:tempfile", "dep:m3u8-rs"]

[dependencies]
thiserror = "2.0.18"
serde_json = "1.0.150"
url = "2.5.8"
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.3"
urlencoding = "2.1.3"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["full"] }

chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10.1"
dirs = "6.0.0"

# -- VOD downloader --
tempfile = { version = "3.27.0", optional = true }
m3u8-rs = { version = "6.0.0", optional = true }

# --- HTTP Backends (Optional) ---
reqwest = { version = "0.13.4", features = ["json", "cookies", "stream"], optional = true }
wreq = { version = "6.0.0-rc.29", features = ["json","cookies", "stream"], optional = true }
wreq-util = { version = "3.0.0-rc.13", features = [], optional = true }